--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body {
     background-color: #9fd5e9;
+    margin: 0 0 2em 0;
+    /* margin-bottom: 0 0 2em 0; */
 }
 
 h1 {
@@ -12,18 +14,19 @@ h2 {
 }
 
 section {
-    padding: 1.5em 2.5em;
+    padding: 1.25em 2.5em;
     margin-right: 40%;
     font-size: 1.25rem;
 }
 
 .active-class {
     background: lightgoldenrodyellow;
-    opacity: 0.8
+    opacity: 0.8;
 }
 
 .active-nav {
     font-weight: bold;
+    color: rgb(38, 173, 56);
 }
 
 #nav_list {
@@ -45,4 +48,5 @@ li:hover {
     position: fixed;
     top: 0;
     width: 100%;
+    background: lightgoldenrodyellow;
 }
