--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,11 @@ h2 {
 }
 
 section {
-    padding: 1.25em 2.5em;
-    margin-right: 40%;
     font-size: 1.25rem;
+    padding: 2em;
+    /* padding: .25em 2.5em; */
+    margin-right: 40%;
+    height: 80vh;
 }
 
 .active-class {
